# seasmon_xr

./: .gitignore  LICENSE  MANIFEST.in  README.md  dev-env.yml  developer.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yaml  publish-s3.yaml  pyenv.yaml  seasmon_xr.yaml
conda/: Makefile  README.md
conda/recipe/: meta.yaml
scripts/: render-simple-index.awk
seasmon_xr/: __init__.py  _version.py  accessors.py
seasmon_xr/ops/: __init__.py  _helper.py  autocorr.py  lroo.py  spi.py  whit.py  ws2d.py  ws2dgu.py  ws2doptv.py  ws2doptvp.py  ws2doptvplc.py  ws2dpgu.py  ws2dwcv.py  ws2dwcvp.py  zonal.py
seasmon_xr/src/: __init__.py  _helper.py  autocorr.py  lroo.py  spi.py  tinterpolate.py  whit.py  ws2d.py  ws2dgu.py  ws2doptv.py  ws2doptvp.py  ws2doptvplc.py  ws2dpgu.py
tests/: conftest.py  test_accessors.py  test_algos.py
tests/data/: ts-ndvi.txt
