[build-system]
requires = ["setuptools>=51.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
allow_redefinition = true

[tool.coverage.run]
omit = [
  "tests/*"
]

[tool.black]
line-length = 88
target-version = ['py38']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
max-line-length = 99

disable = [
  "too-many-locals",
  "too-many-branches",
  "too-many-statements",
  "too-few-public-methods",
  "too-many-arguments",
  "missing-module-docstring",
  "missing-function-docstring",
  "invalid-name",
  "duplicate-code",
  "fixme",
  "wrong-import-order",
  "unnecessary-lambda-assignment",
]