[metadata]
name = seasmon_xr
description = xarray tools for seasonal monitor
version = attr: seasmon_xr._version.__version__
author = WFP-VAM
author_email =
maintainer = WFP-VAM
maintainer_email =
long_description_content_type = text/markdown
long_description = file: README.md
platforms = any
license = MIT License
url = https://github.com/WFP-VAM/seasmon_xr/
project_urls =
   Documentation = https://seasmon_xr.readthedocs.io/en/latest/
   Bug Reporting = https://github.com/WFP-VAM/seasmon_xr/issues

classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Development Status :: 2 - Pre-Alpha
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Natural Language :: English
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: GIS

[options]
python_requires = >=3.7
include_package_data = false
zip_safe = false
packages = find_namespace:
install_requires =
  numpy
  xarray
  dask[array]
  numba

[options.extras_require]
test =
    pytest
spi =
    scipy
    numba-scipy

[options.packages.find]
include =
  seasmon_xr*

[aliases]
# Define setup.py command aliases here
test = pytest
